tools: added spec-vuart, spec-fwloader, multiple SPEC support & base address settings

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -3,9 +3,9 @@ CFLAGS = -ggdb -Wall
 LDFLAGS = -L. -lspec
 
 LIB = libspec.a
-LIBOBJ = speclib.o
+LIBOBJ = speclib.o loader-ll.o
 
-PROGS = specmem spec-cl
+PROGS = spec-cl spec-fwloader spec-vuart # specmem
 
 
 all: $(LIB) $(PROGS)
@@ -15,6 +15,8 @@ $(PROGS): $(LIB)
 $(LIB): $(LIBOBJ)
 	ar r $@ $^
 
+loader-ll.o:	../kernel/loader-ll.c
+		${CC} -c $^ -I .
 
 clean:
 	rm -f *.o $(LIB) $(PROGS) *~
