kernel: add wr-nic-dio with mezzanine ioctl, currently empty
Signed-off-by: Alessandro Rubini <rubini@gnudd.com>

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -21,6 +21,7 @@ spec-$(CONFIG_GPIOLIB) += spec-gpio.o
 
 wr-nic-y = wr-nic-core.o
 wr-nic-y += wr-nic-eth.o
+wr-nic-y += wr-nic-dio.o
 wr-nic-y += wr_nic/device.o
 wr-nic-y += wr_nic/endpoint.o
 wr-nic-y += wr_nic/ethtool.o
