kernel: accept WR_NIC_CFLAGS from the make command line
Signed-off-by: Alessandro Rubini <rubini@gnudd.com>

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,7 +1,8 @@
 
 LINUX ?= /lib/modules/$(shell uname -r)/build
 
-ccflags-y = -I$M/include
+ccflags-y += -I$M/include
+ccflags-y += $(WR_NIC_CFLAGS)
 
 obj-m = fmc.o
 obj-m += spec.o
