--- a/doc/spec-sw.in
+++ b/doc/spec-sw.in
@@ -39,7 +39,7 @@
 
 @titlepage
 @title SPEC Software Support
-@subtitle (@value{update-month})
+@subtitle Version 2.0-rc2 (@value{update-month})
 @subtitle A driver for the SPEC card and its FMC modules
 @author Alessandro Rubini for CERN (BE-CO-HT)
 @end titlepage
@@ -89,7 +89,9 @@ set the following variables in your environment:
 
 	The top directory of the kernel sources for the version you
         are going to run the driver under. I'm testing mostly with 3.4,
-	but this version compiles against Linux-2.6.30 and later ones.
+	but this version compiles against Linux-2.6.36 and later ones
+        (2.6.35 had a different interface for hardware timestamping,
+        so @i{fmc} and @i{spec} compile fine, but @i{wr-nic} does not.
 
 @item CROSS_COMPILE
 
@@ -548,8 +550,8 @@ the @i{files} tab of the Open Hardware Repository. The direct
 links are:
 
 @example
-http://www.ohwr.org/attachments/download/1584/wr_nic_dio.bin-2012-09-13
-http://www.ohwr.org/attachments/download/1585/wr_nic_dio-wrc.bin-2012-09-13
+http://www.ohwr.org/attachments/download/1596/wr_nic_dio.bin-2012-09-20
+http://www.ohwr.org/attachments/download/1597/wr_nic_dio-wrc.bin-2012-09-20
 @end example
 
 The date is included in the binary name so we won't need to remove the
@@ -561,9 +563,9 @@ needed to run @i{wr-nic}:
 @smallexample
 cd /tmp
 wget -O wr_nic_dio.bin \
-   http://www.ohwr.org/attachments/download/1584/wr_nic_dio.bin-2012-09-13
+   http://www.ohwr.org/attachments/download/1596/wr_nic_dio.bin-2012-09-20
 wget -O wr_nic_dio-wrc.bin \
-    http://www.ohwr.org/attachments/download/1585/wr_nic_dio-wrc.bin-2012-09-13
+   http://www.ohwr.org/attachments/download/1597/wr_nic_dio-wrc.bin-2012-09-20
 sudo mv wr_nic_dio wr_nic_dio-wrc /lib/firmware/fmc
 @end smallexample
 
@@ -937,16 +939,13 @@ will be supported at module load time, not at runtime (for that please
 use the UART).
 
 @item DIO support in @i{wr-nic} is missing some of the features listed
-in @file{wr-dio.h}.
+in @file{wr-dio.h} (i.e., pulse trains and DAC control)>
 
 @item DIO support should use interrupts to allow pulse trains to be generated
 and timestamps to be collected without polling the FIFO.
 
 @item The @i{wr-nic} functionality should be completely detached from
 the specific mezzanine. This is a longer-term desire.
-
-@item The package should be verified with a wide range of kernel versions.
-Currently I compiled and tested only under Linux-3.4.
 
 @end itemize
 
