--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -28,6 +28,7 @@ wr-nic-y += wr_nic/endpoint.o
 wr-nic-y += wr_nic/ethtool.o
 wr-nic-y += wr_nic/nic-core.o
 wr-nic-y += wr_nic/timestamp.o
+wr-nic-y += wr_nic/pps.o
 wr-nic-$(CONFIG_GPIOLIB) += wr-nic-gpio.o
 
 
